--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,13 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-P6Y7G0TC54"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LRMZJ6X72H"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-P6Y7G0TC54');
+  gtag('config', 'G-LRMZJ6X72H');
 </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
